--- a/package.json
+++ b/package.json
@@ -1,1 +1,8 @@
-{"scripts":{"start":"vite"},"devDependencies":{"autoprefixer":"^10.4.21","postcss":"^8.5.3","vite":"^6.3.5"},"dependencies":{"feather":"^0.0.5","tailwindcss":"^3.4.17"}}
+{"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "start": "vite"
+},
+"devDependencies":{"autoprefixer":"^10.4.21","postcss":"^8.5.3","vite":"^6.3.5"},
+"dependencies":{"feather":"^0.0.5","tailwindcss":"^3.4.17"}}
